Changelog Notes:
Added Sandbox Setting for Gym Goer Removing Exercise Fatigue