@@ -179,7 +179,7 @@ UI_EN = {
     UI_trait_fitted = "Well-Fitted",
     UI_trait_fitteddesc = "Worn clothing weighs half as much and does not impose any speed penalty.",
     UI_trait_restfulsleeper = "Restful Sleeper",
-	UI_trait_restfulsleeperdesc = "Fast gain of energy while sleeping.",
+	UI_trait_restfulsleeperdesc = "Fast gain of energy while sleeping.<br>Suffers no penalties from sleeping on bad furniture or on the ground.<br>Automaticallyw akes up when sleeping.",
     UI_trait_tavernbrawler = "Tavern Brawler",
     UI_trait_tavernbrawlerdesc = "You are more effective at using whatever is available to you as a weapon.<br>Improvised weapons (such as, but not limited to: Spoons, Forks, Pool Cues, or Frying Pans) are slightly more effective and much less likely to break.<br>Please note that improvised weapons will never be a good alternative to proper weapons, but this trait makes them more usable as a stopgap.",
     UI_trait_noxpshooter = "Hobby: Shooter",
