@@ -60,6 +60,11 @@ option MoreTraits.GymGoerPercent
 	type = integer, min = 100, max = 1000, default = 200,
 	page = MoreTraits, translation = MoreTraits_GymGoerPercent,
 }
+option MoreTraits.GymGoerNoExerciseFatigue
+{
+	type = boolean, default = true,
+	page = MoreTraits, translation = MoreTraits_GymGoerNoExerciseFatigue,
+}
 option MoreTraits.IndefatigableRecharge
 {
 	type = integer, min = 1, max = 30, default = 7,
@@ -199,9 +204,4 @@ option MoreTraits.SecondWindCooldown
 {
 	type = integer, min = 1, max = 30, default = 14,
 	page = MoreTraits, translation = MoreTraits_SecondWindCooldown,
-}
-option MoreTraits.GymGoerNoExerciseFatigue
-{
-	type = boolean, default = true,
-	page = MoreTraits, translation = MoreTraits_GymGoerNoExerciseFatigue,
 }
